@startuml
'https://plantuml.com/class-diagram
title Code Diagram Backend Adapter voor triptop


class TravelService{
    getTravelData(locationStart: String, locationEnd: String, travelType: String): void
}

interface TravelAdapter{
   getRoute(): void
}
class DirectionsAdapter{
 getRoute(locationStart: String, locationEnd:String): String
}
class DeutscheBahnAdapter{
   getRoute(locationStart: String, locationEnd:String): String
}




TravelService --> TravelAdapter

DirectionsAdapter..|> TravelAdapter
DeutscheBahnAdapter ..|> TravelAdapter


node DeutscheBahnAPI as "DeutscheBahnApi"{
   }

node DirectionsApi as "DirectionsApi"{
   }

DirectionsAdapter -- DirectionsApi
DeutscheBahnAdapter -- DeutscheBahnAPI
@enduml